AC_INIT([vloader], [0.01], [morgawr@gmail.com], [vloader], [https://github.com/Morgawr/vloader])
AC_PREREQ([2.69])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_HEADERS([include/config.h])
AC_PROG_CC

if test "`cd $srcdir; /bin/pwd`" = "`/bin/pwd`"; then
  AC_MSG_ERROR([you must configure in a separate build directory])
fi

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
